feat: improve product testing and global pricing
